# quiet_theory

./: .gitignore  README.md  ame62_check.py  pyproject.toml
.github/workflows/: tests.yml
docs/: D0_axioms_v1.md  D0_model_v1.md  D0_spec.md
quiet_theory/: __init__.py
src/quiet_theory/: __main__.py
src/quiet_theory/d0/: __init__.py  demo.py  emergence.py  evolve.py  evolve_demo.py  graph.py  info.py  io.py  model.py  objective.py  ops.py  rewire.py  update.py
src/quiet_theory/quantum/: ame.py  states.py
tests/: conftest.py  test_ame62.py  test_d0_api_compat.py  test_d0_bell_pair.py  test_d0_emergence.py  test_d0_ops_invariants.py  test_d0_pipeline_a_then_b.py  test_d0_rewire_and_io.py  test_d0_smoke.py  test_d0_unitary_invariants.py
tools/: generate_states.py
