[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quiet-theory"
version = "0.1.0"
description = "QuIET (Quantum Information Entropic Theory) - research sandbox"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["numpy>=2.0"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
